--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/ui/*",
+      "packages/*"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BlowinInWind/baili-design.git"
   },
   "keywords": [],
-  "dependencies": {
-    "lerna": "^5.2.0"
-  },
+  "dependencies": {},
   "author": "",
   "license": "ISC",
   "bugs": {
