--- a/lerna.json
+++ b/lerna.json
@@ -1,16 +1,6 @@
 {
-  "useWorkspaces": true,
-  "private": true,
   "packages": [
-    "packages/ui/*",
     "packages/*"
   ],
-  "version": "independent",
-  "npmClient": "yarn",
-  "registry": "https://registry.npmjs.org/",
-  "bootstrap": {
-    "npmClientArgs": [
-      "--no-package-lock"
-    ]
-  }
+  "version": "independent"
 }
