--- a/package.json
+++ b/package.json
@@ -1,28 +1,7 @@
 {
-  "name": "baili-design",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "root",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/ui/*",
-      "packages/*"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BlowinInWind/baili-design.git"
-  },
-  "keywords": [],
-  "dependencies": {},
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BlowinInWind/baili-design/issues"
-  },
-  "homepage": "https://github.com/BlowinInWind/baili-design#readme"
+  "devDependencies": {
+    "lerna": "^4.0.0"
+  }
 }
