--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "babel-loader": "^8.2.5",
     "concurrently": "^7.3.0",
     "eslint": "^8.17.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "rollup": "^2.77.2",
     "eslint-plugin-storybook": "^0.6.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "lerna": "^5.2.0",
     "typescript": "^4.7.3"
   },
