--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,23 +1,41 @@
 {
-  "name": "components",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rollup": "^2.77.2",
-    "esbuild": "^0.14.51",
-    "rollup-plugin-esbuild": "^4.9.1"
-  },
-  "peerDependencies": {
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "components",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "devDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "rollup": "^2.77.2",
+        "esbuild": "^0.14.51",
+        "@babel/plugin-external-helpers": "^7.18.6",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-transform-runtime": "^7.18.9",
+        "@babel/preset-env": "^7.18.9",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
+        "@rollup/plugin-typescript": "^8.3.4",
+        "rollup-plugin-typescript2": "^0.32.1",
+        "@rollup/plugin-eslint": "^8.0.2",
+        "@rollup/plugin-babel": "^5.3.1",
+        "rollup-plugin-esbuild": "^4.9.1",
+        "@rollup/plugin-node-resolve": "^13.3.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-replace": "^4.0.0"
+    },
+    "peerDependencies": {
+        "react": ">=16.8.6",
+        "react-dom": ">=16.8.6"
+    },
+    "scripts": {
+        "clean": "rimraf dist",
+        "prebuild": "yarn clean",
+        "build:esm": "rollup -c rollup.config.js",
+        "build": "concurrently yarn:build:*",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
