--- a/package.json
+++ b/package.json
@@ -1,49 +1,55 @@
 {
-  "name": "root",
-  "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/*",
-      "packages/ui/*",
-      "packages/components/*"
-    ]
-  },
-  "scripts": {
-    "build": "lerna run build --no-private --sort",
-    "bootstrap": "lerna bootstrap",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.9",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "babel-loader": "^8.2.5",
-    "concurrently": "^7.3.0",
-    "eslint": "^8.17.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "rollup": "^2.77.2",
-    "eslint-plugin-storybook": "^0.6.1",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "lerna": "^5.2.0",
-    "typescript": "^4.7.3"
-  },
-  "dependencies": {
-    "@storybook/react": "^6.5.9",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "name": "root",
+    "private": true,
+    "workspaces": {
+        "packages": [
+            "packages/*",
+            "packages/ui/*",
+            "packages/components/*"
+        ]
+    },
+    "scripts": {
+        "build": "lerna run build --no-private --sort",
+        "bootstrap": "lerna bootstrap",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "devDependencies": {
+        "rimraf": "^3.0.2",
+        "@types/react": "^18.0.15",
+        "@types/react-dom": "^18.0.6",
+        "@babel/core": "^7.18.9",
+        "@storybook/addon-actions": "^6.5.9",
+        "@storybook/addon-essentials": "^6.5.9",
+        "@storybook/addon-interactions": "^6.5.9",
+        "@storybook/addon-links": "^6.5.9",
+        "@storybook/builder-webpack4": "^6.5.9",
+        "@storybook/manager-webpack4": "^6.5.9",
+        "@storybook/testing-library": "^0.0.13",
+        "@typescript-eslint/eslint-plugin": "^5.28.0",
+        "@typescript-eslint/parser": "^5.28.0",
+        "babel-loader": "^8.2.5",
+        "concurrently": "^7.3.0",
+        "eslint": "^8.17.0",
+        "prettier": "^2.7.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "rollup": "^2.77.2",
+        "eslint-plugin-storybook": "^0.6.1",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-n": "^15.2.4",
+        "eslint-plugin-standard": "^5.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-config-prettier": "^8.5.0",
+        "lerna": "^5.2.0",
+        "typescript": "^4.7.3"
+    },
+    "dependencies": {
+        "@storybook/react": "^6.5.9",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    }
 }
