--- a/packages/ui/input/tsconfig.json
+++ b/packages/ui/input/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "../../../tsconfig.json",
-  "compilerOptions": {
-    // "outDir": "./dist"
-  },
-  "files": ["./src/index.ts"]
-}
+    "extends": "../../../tsconfig.json",
+    "compilerOptions": {
+
+    },
+    "include": ["src"],
+    "files": ["./src/index.ts"]
+  }
