--- a/packages/components/.babelrc
+++ b/packages/components/.babelrc
@@ -12,14 +12,7 @@
         "@babel/preset-typescript"
     ],
     "plugins": [
-        [
-            "@babel/plugin-transform-runtime",
-            {
-                "corejs": 3,
-                "proposals": true,
-                "helpers": true
-            }
-        ],
+        // "@babel/plugin-transform-runtime",
         "@babel/plugin-proposal-class-properties"
     ]
 }
